--- a/index.html
+++ b/index.html
@@ -370,6 +370,40 @@
       border-radius: 2px;
     }
 
+    /* Custom tooltip styling */
+    .variant-word .tooltip {
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #000;
+      color: #fff;
+      font-weight: bold;
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 12px;
+      white-space: nowrap;
+      z-index: 1000;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.1s ease;
+      margin-bottom: 4px;
+    }
+
+    .variant-word .tooltip::after {
+      content: '';
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      border: 4px solid transparent;
+      border-top-color: #000;
+    }
+
+    .variant-word:hover .tooltip {
+      opacity: 1;
+    }
+
     /* Special styling for the Ichrolic output textarea */
     #ichrolicOutput {
       cursor: pointer;
@@ -1000,9 +1034,23 @@
       const newVariant = wordVariants[baseWord][nextIndex];
       console.log(`Cycled "${baseWord}" to variant: ${newVariant.type} (${newVariant.translation})`);
       
-      // Update display and retranslate
-      updateEnglishInputDisplay();
+      // Update tooltips immediately for this word without rebuilding entire display
+      const escapedBaseWord = escapeHtml(baseWord);
+      const variantSpans = englishInput.querySelectorAll(`[data-base-word="${escapedBaseWord}"]`);
+      variantSpans.forEach(span => {
+        const tooltip = span.querySelector('.tooltip');
+        if (tooltip) {
+          tooltip.textContent = newVariant.type;
+        }
+      });
+      
+      // Retranslate to show new variant
       translateToIchrolic();
+    }
+
+    // Validate that a string is safe for use in HTML attributes (no quotes or angle brackets)
+    function isSafeForAttribute(str) {
+      return !/[<>"']/.test(str);
     }
 
     // HTML escape function to prevent XSS
@@ -1087,12 +1135,14 @@
       for (const token of tokens) {
         if (token.type === 'word') {
           const baseWord = token.content.toLowerCase();
-          if (wordVariants[baseWord]) {
+          if (wordVariants[baseWord] && isSafeForAttribute(baseWord)) {
             const variant = getSelectedVariant(baseWord);
             const tooltipText = variant ? escapeHtml(variant.type) : 'VARIANT';
-            const escapedBaseWord = escapeHtml(baseWord);
             const escapedContent = escapeHtml(token.content);
-            html += `<span class="variant-word" data-base-word="${escapedBaseWord}" title="${tooltipText}">${escapedContent}</span>`;
+            html += `<span class="variant-word" data-base-word="${baseWord}">
+              ${escapedContent}
+              <span class="tooltip">${tooltipText}</span>
+            </span>`;
           } else {
             html += escapeHtml(token.content);
           }
@@ -1436,8 +1486,12 @@
       if (variantWord) {
         e.preventDefault();
         e.stopPropagation();
-        const baseWord = variantWord.getAttribute('data-base-word');
-        if (baseWord) {
+        const escapedBaseWord = variantWord.getAttribute('data-base-word');
+        if (escapedBaseWord) {
+          // Create a temporary div to decode the HTML entities back to text
+          const tempDiv = document.createElement('div');
+          tempDiv.innerHTML = escapedBaseWord;
+          const baseWord = tempDiv.textContent || tempDiv.innerText || "";
           cycleVariant(baseWord);
         }
       }
