--- a/index.html
+++ b/index.html
@@ -372,10 +372,7 @@
 
     /* Custom tooltip styling */
     .variant-word .tooltip {
-      position: absolute;
-      bottom: 100%;
-      left: 50%;
-      transform: translateX(-50%);
+      position: fixed;
       background-color: #000;
       color: #fff;
       font-weight: bold;
@@ -383,11 +380,11 @@
       border-radius: 4px;
       font-size: 12px;
       white-space: nowrap;
-      z-index: 1000;
+      z-index: 9999;
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.1s ease;
-      margin-bottom: 4px;
+      transform: translateX(-50%);
     }
 
     .variant-word .tooltip::after {
