on your knees like a good puppy

--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@
       
       // Position tooltip above the word, centered
       const tooltipLeft = relativeLeft + (targetWidth / 2);
-      const tooltipTop = relativeTop - 10; // 10px above the word
+      const tooltipTop = relativeTop + 10;
       
       customTooltip.style.left = tooltipLeft + 'px';
       customTooltip.style.top = tooltipTop + 'px';
