I focus on the pain

--- a/index.html
+++ b/index.html
@@ -1182,8 +1182,8 @@
     }
 
     function handleVariantClick(e) {
-      e.preventDefault();
-      e.stopPropagation();
+      //e.preventDefault();
+      //e.stopPropagation();
       const baseWord = e.target.getAttribute('data-base-word');
       if (baseWord) {
         cycleVariant(baseWord);
