--- a/index.html
+++ b/index.html
@@ -2579,13 +2579,14 @@
       const prefixes = [
         "èden",
         "al-",
-        "yana"
+        "yana",
+        "ky"
       ];
   
       // Suffixes that should always combine with the preceding word
       const suffixes = [
-        "íka",
-        "yuhni"
+        "íka"
+        //"yuhni"
       ];
   
       // Helper function to check if a word is "special" (mergeable, prefix, or suffix)
